# camera-controller-2

./: .clang-format  .gitignore  README.md  arm_linux.ini  d3000_configs.txt  meson.build  meson_options.txt
include/: cxxopts.hpp
scripts/events/: events.txt  generate_events.py  genevents.sh  topics.txt
scripts/events/template/: CCEvents.cpp.template  CCEvents.h.template
src/: CCEvents.cpp  CCEvents.h  EventLogger.cpp  EventLogger.h  Events.h  main.cpp
src/async/: ActiveObject.h
src/camera/: Camera.h  CameraController.cpp  CameraController.h  CameraWidget.h  CameraWrapper.cpp  CameraWrapper.h  CameraWrapper2.cpp  CameraWrapper2.h
src/camera/wrapper/: CameraExceptions.h  CameraWidget.cpp  CameraWidget.h  CameraWrapper.cpp  CameraWrapper.h
src/camera/wrapper/camera_mappings/: mappings.h
src/cameracontroller/: CCEvents.cpp  CCEvents.h  Events.h
src/cameracontroller/cameramanager/: CameraData.h  CameraManager.cpp  CameraManager.h
src/collections/: SyncQueue.h
src/events/: Event.cpp  Event.h  EventBroker.cpp  EventBroker.h  EventHandler.h  HSM.h
src/utils/: EventInjector.h  EventSniffer.h  Singleton.h  logger.h
tests/: camerawrapper.cpp  catch_main.cpp  random_test.cpp
